possible fix for projects page overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
-  padding-left: 1em;
+  padding-left: 15px;
   display: flex;
   flex-direction: column;
   color: whitesmoke;
@@ -35,7 +35,7 @@
   justify-content: center;
   text-align: center;
   align-items: center;
-  margin-left: 10em;
+  margin-left: 160px;
   padding: 0px 10px
 }
 
